fix: restore unified dashboard (e335713) + cache Redis for assetMovers
- Frontend: revert to e335713 (single DASHBOARD_QUERY, no split, no HealthGate blocking)
- Backend schema: assetMovers returns flat list [AssetMover!]! matching frontend
- DataCollectorClient: parses flat array, sorts by volatility, caches in Redis (60s TTL)
- RedisConfig: added RedisTemplate<String, Object> bean with JSON serializer
- Result: 1st load ~7s (data collector), subsequent loads ~40ms (Redis cache)